# percept

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.md  THIRD_PARTY_NOTICES.md  install.sh
.github/workflows/: build.yml  e2e-linux.yml  e2e-macos.yml  e2e-windows.yml  publish.yml  release.yml
src/: main.rs  query.rs  state.rs  types.rs
src/commands/: annotate.rs  click.rs  interact.rs  mod.rs  observe.rs  read.rs  screenshot.rs  scroll.rs  type_text.rs  wait.rs
src/platform/: linux.rs  macos.rs  mod.rs
src/platform/accessibility/: linux.rs  macos.rs  mod.rs  windows.rs
tests/: e2e_cli.rs  e2e_live.rs  e2e_pipeline.rs
