[package]
name = "agent-desktop"
version = "0.1.2"
edition = "2021"
description = "CLI tool for AI agents to observe and interact with desktop UIs via accessibility APIs"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "6"
anyhow = "1"

# Linux AT-SPI2 accessibility
[target.'cfg(target_os = "linux")'.dependencies]
atspi = "0.22"
zbus = "4"

# macOS accessibility (core-foundation for FFI helpers)
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"

# Windows UI Automation
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
] }

[features]
e2e = []

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
