[package]
name = "agent-desktop"
version = "0.1.2"
edition = "2021"
description = "CLI tool for AI agents to observe and interact with desktop UIs via accessibility APIs"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
anyhow = "1"
xa11y = "0.2"

# macOS platform operations (screenshots, click, keyboard) use core-foundation for AX window bounds
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"

[features]
e2e = []

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
